--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		</header>
 		<div class="banner">
 		
+			<p>muhanga patrick</p>
 		</div>
 		<section class="main">
 		 <div class="main-section">
