--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<header id="header" class="header">
 		
 		</header>
+	<p>hgjdvghdjhgh</p>
 		<div class="banner">
 		
 			<p>muhanga patrick</p>
