added my name in the footer

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		 </div>
 		 </section>
 		 <footer class="footer">
-		 muahshshshhshshh
+		 <p>muhanga parto</p>
 		 </footer>
 </body>
 </html>
